force-app/main/default/objects/EBD_NPS__c/EBD_NPS__c.object-meta.xml
<CustomObject>
    <label>EBD NPS</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>EBD NPS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBD NPS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>