force-app/main/default/objects/EBD_NPS__c/fields/Action_Steps_Planned_Taken__c.field-meta.xml
<CustomField>
    <fullName>Action_Steps_Planned_Taken__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Action Steps Planned/Taken</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>