force-app/main/default/objects/EBD_NPS__c/fields/EBD__c.field-meta.xml
<CustomField>
    <fullName>EBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EBD</label>
    <referenceTo>EBD__c</referenceTo>
    <relationshipLabel>EBD NPS</relationshipLabel>
    <relationshipName>EBD_NPS</relationshipName>
    <type>Lookup</type>
</CustomField>