force-app/main/default/objects/EBD_NPS__c/fields/Other_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Other_Strategy__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>