force-app/main/default/objects/EBD_NPS__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <label>Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>AMT: People Performance</fullName>
            </value>
            <value>
                <fullName>AMT: Process</fullName>
            </value>
            <value>
                <fullName>AMT: Relationship Development</fullName>
            </value>
            <value>
                <fullName>Consultants</fullName>
            </value>
            <value>
                <fullName>Data/Reporting</fullName>
            </value>
            <value>
                <fullName>Innovation</fullName>
            </value>
            <value>
                <fullName>Member: Advocacy/Service</fullName>
            </value>
            <value>
                <fullName>Member: Communication/Education</fullName>
            </value>
            <value>
                <fullName>Member: Digital</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Plan Administration</fullName>
            </value>
            <value>
                <fullName>Product: Behavioral Health</fullName>
            </value>
            <value>
                <fullName>Product: Clinical/Wellness</fullName>
            </value>
            <value>
                <fullName>Product: Financial Solutions</fullName>
            </value>
            <value>
                <fullName>Product: Pharmacy</fullName>
            </value>
            <value>
                <fullName>Product: Specialty</fullName>
            </value>
            <value>
                <fullName>Product: Surest</fullName>
            </value>
            <value>
                <fullName>Product: Other</fullName>
            </value>
            <value>
                <fullName>Working with UHG Partners</fullName>
            </value>
            <value>
                <fullName>Working with Third Party Vendors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>